--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Shower water saver</title>
+    <link rel="stylesheet" href="css/global.css">
+    <script src="js/global.js"></script>
 </head>
 <body>
     <div class="app">
