--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Shower water saver</title>
+
     <link rel="stylesheet" href="css/global.css">
+
+    <script src="node_modules/vue/dist/vue.js"></script>
     <script src="js/global.js"></script>
 </head>
 <body>
