--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/global.css">
 
     <script src="node_modules/vue/dist/vue.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/counter.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
-    <div class="app">
+    <div class="app" id="app">
         <h1 class="app-title">Shower water saver</h1>
 
         <div class="infos-container">
