--- a/index.html
+++ b/index.html
@@ -7,26 +7,14 @@
     <link rel="stylesheet" href="css/global.css">
 
     <script src="node_modules/vue/dist/vue.js"></script>
-    <script src="js/counter.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/counter.js"></script>
 </head>
 <body>
     <div class="app" id="app">
         <h1 class="app-title">Shower water saver</h1>
 
-        <div class="infos-container">
-            <div class="infos -time">
-                <p class="info-label -time">Time</p>
-                <p class="info-value -time -actual js-actual-time">0' 0"</p>
-                <p class="info-value -time -average js-average-time">0' 0"</p>
-            </div>
-
-            <div class="infos -consumption">
-                <p class="info-label -consumption">Consumption</p>
-                <p class="info-value -consumption -actual js-actual-consumption">0 L</p>
-                <p class="info-value -consumption -average js-average-consumption">0 L</p>
-            </div>
-        </div>
+        <counter></counter>
 
         <div class="progress">
             <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
