--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="app" id="app">
         <h1 class="app-title">Shower water saver</h1>
 
-        <counter></counter>
+        <shower-counter></shower-counter>
 
         <div class="progress">
             <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
