--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/app.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/progress.js"></script>
+    <script src="js/multiplicator.js"></script>
 </head>
 <body>
     <div class="app" id="app">
@@ -22,8 +23,8 @@
         <div class="license">
             <p>Icon made by Freepik from <a href="http://www.flaticon.com">www.flaticon.com</a></p>
         </div>
-    </div>
 
-    <button type="button" class="multiplicator js-multiplicator">&times;1</button>
+        <shower-multiplicator></shower-multiplicator>
+    </div>
 </body>
 </html>
