--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/tracker.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/progress.js"></script>
     <script src="js/multiplicator.js"></script>
