Stop component + styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/tracker.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/progress.js"></script>
+    <script src="js/stop.js"></script>
     <script src="js/multiplicator.js"></script>
 </head>
 <body>
@@ -20,6 +21,8 @@
         <shower-counter></shower-counter>
 
         <shower-progress></shower-progress>
+
+        <shower-stop></shower-stop>
 
         <div class="license">
             <p>Icon made by Freepik from <a href="http://www.flaticon.com">www.flaticon.com</a></p>
